<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="fill"
    android:orientation="vertical"
    android:background="@drawable/lightbackground" >

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:text="@string/create_account"
        android:layout_gravity="center"
        android:textColor="#92a672"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textColor="#92a672"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_full_name"
        android:layout_width="300dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/username"
        android:textColor="#92a672"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/email"
        android:textColor="#92a672"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp" />
    
     <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/password"
        android:textColor="#92a672"
        android:textAppearance="?android:attr/textAppearanceMedium" />

     <EditText
         android:id="@+id/edit_password"
         android:layout_marginLeft="10dp"
         android:layout_width="300dp"
         android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/password_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_x"
        android:layout_marginLeft="10dp"
        android:textColor="#92a672"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_passwordX"
        android:layout_marginLeft="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/state"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:textColor="#92a672"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:layout_marginLeft="10dp"
        android:id="@+id/state_spinner"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:prompt="@string/city_prompt" />

    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/zipcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zipcode"
        android:textColor="#92a672"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:layout_marginLeft="10dp"
        android:id="@+id/edit_zipcode"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textColor="#92a672"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:layout_marginLeft="10dp"
        android:id="@+id/edit_city"
        android:layout_width="300dp"
        android:layout_height="wrap_content" >
    </EditText>

    <Button
        android:layout_marginLeft="10dp"
        android:id="@+id/button_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_create_account"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFF"
        android:background="@drawable/submit"  />

</LinearLayout>
</ScrollView>